# dioxus_tutorial_dog_app

./: Cargo.toml  Dioxus.toml
assets/: dog_data.json  index.html  main.css
src/: app.rs  constants.rs  main.rs
src/app_model/: app_context.rs  theme.rs
src/components/: app_footer.rs  app_header.rs  dog_tile.rs  dogs_view.rs  helpers.rs
src/components/controls/: breed_filter.rs  button.rs  reset_button.rs  sort_by_control.rs
src/dog_model/: breed.rs  dog.rs  dog_db.rs
src/util/: app_local_storage.rs
