[package]
name = "dioxus_tutorial"
version = "0.1.0"
authors = ["reuschj"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
getrandom = { version = "0.2.15", features = ["js"] }
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.138"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
wasm-logger = "0.2.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dioxus-assets]
assets = ["/assets/dog_data.json"]
